--- a/web/src/index.css
+++ b/web/src/index.css
@@ -35,7 +35,7 @@
   border-radius: 0.5rem;
   background-color: #2d2d2d;
   color: #fff;
-  font-size: 1.5rem;
+  font-size: .8rem;
   font-weight: 500;
   box-shadow: 0 0 0.5rem 0.1rem rgba(0, 0, 0, 0.1);
   margin-top: 0; /* Added to remove top margin */
