--- a/web/src/index.css
+++ b/web/src/index.css
@@ -25,11 +25,18 @@
 /*   } */
 /* } */
 
+.output-container {
+  display: grid;
+
+  /* flex-direction: row; */ 
+  /* flex-wrap: wrap; */
+  gap: .5rem;
+  margin: 0.5rem;
+}
+
+
 .output-line {
-  display: flex;
-  flex-direction: row;
-  justify-content: left;
-  align-items: left;
+  /* flex: 1 1 auto; */ 
   margin: 0.5rem 0;
   padding: 0.5rem;
   border-radius: 0.5rem;
@@ -44,3 +51,12 @@
 .output-line.focused {
   outline: 3px dashed #747bff;
 }
+
+.hide {
+  display: none;
+}
+
+.unhide-trigger-inline:hover .hide {
+  display: inline-blo;
+}
+
