--- a/web/src/index.css
+++ b/web/src/index.css
@@ -49,6 +49,7 @@
   font-weight: 500;
   box-shadow: 0 0 0.5rem 0.1rem rgba(0, 0, 0, 0.1);
   margin-top: 0; /* Added to remove top margin */
+  overflow-x: scroll; 
 }
 
 .updated-pill {
